[project]
name = "furigana"
version = "0.0.7.1"
description = "Convert Japanese Kanji to Kanji attached with Hiragana. For example, 「澱んだ街角」→「澱(よど)んだ街角(まちかど)」"
license = { file = "LICENSE.txt" }
readme = "README.rst"
authors = [
    { name = "Miki.Liu", email = "mikimotoh@gmail.com" },
]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["Japanese", "Language", "Processing"]

[project.urls]
Source = "https://github.com/MikimotoH/furigana"

[build-system]
requires = ["flit_core >= 3.9.0"]
build-backend = "flit_core.buildapi"
